Page Search example

--- a/src/main/resources/templates/paginator.html
+++ b/src/main/resources/templates/paginator.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <body>
-        <form action="#" th:action="@{/digest}" th:object="${pageForm}" method="get" th:fragment="pg" th:if="${all gt 1}" th:with="start=${startAux lt 0 ? 0 : startAux},end=${endAux gt all ? all : endAux}">
+        <form action="#" th:action="@{__${pageForm.path}__}" th:object="${pageForm}" method="get" th:fragment="pg" th:if="${all gt 1}" th:with="start=${startAux lt 0 ? 0 : startAux},end=${endAux gt all ? all : endAux}">
             <span th:text="#{digest.paginator.pages} + ': ' + ${all}"></span>
             <span th:if="${start gt 0}">
-                <a href="#" th:href="@{/digest(page=1)}" th:text="'<<'" th:title="#{digest.paginator.page} + ' 1'"></a>
+                <a href="#" th:href="@{__${pageForm.path}__(page=1)}" th:text="'<<'" th:title="#{digest.paginator.page} + ' 1'"></a>
             </span>
             <span th:if="${current gt 1}">
-                <a href="#" th:href="@{/digest(page=${current - 1})}" th:text="'<'" th:title="#{digest.paginator.page} + ' ' + ${current - 1}"></a>
+                <a href="#" th:href="@{__${pageForm.path}__(page=${current - 1})}" th:text="'<'" th:title="#{digest.paginator.page} + ' ' + ${current - 1}"></a>
             </span>
             <span th:each="i : ${#numbers.sequence(start + 1, end)}" th:style="${i == current ? 'background:red' : ''}">
-                <a href="#" th:href="@{/digest(page=${i})}" th:text="' ' + ${i}" th:title="#{digest.paginator.page} + ' ' + ${i}"></a>
+                <a href="#" th:href="@{__${pageForm.path}__(page=${i})}" th:text="' ' + ${i}" th:title="#{digest.paginator.page} + ' ' + ${i}"></a>
             </span>
             <span th:if="${current lt all}">
-                <a href="#" th:href="@{/digest(page=${current + 1})}" th:text="'>'" th:title="#{digest.paginator.page} + ' ' + ${current + 1}"></a>
+                <a href="#" th:href="@{__${pageForm.path}__(page=${current + 1})}" th:text="'>'" th:title="#{digest.paginator.page} + ' ' + ${current + 1}"></a>
             </span>
             <span th:if="${end lt all}">
-                <a href="#" th:href="@{/digest(page=${all})}" th:text="'>>'" th:title="#{digest.paginator.page} + ' ' + ${all}"></a>
+                <a href="#" th:href="@{__${pageForm.path}__(page=${all})}" th:text="'>>'" th:title="#{digest.paginator.page} + ' ' + ${all}"></a>
             </span>
             <input type="text" th:field="*{page}" size="3" th:placeholder="#{digest.paginator.placeholder}" />
             <input type="submit" th:value="#{digest.paginator.ok}" />
