--- a/src/main/resources/templates/markdown.html
+++ b/src/main/resources/templates/markdown.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:lang="${@environment.getProperty('digest.site.lang')}">
+<html xmlns:th="http://www.thymeleaf.org" th:lang="${@environment.getProperty('general.lang')}">
     <head>
         <meta charset="utf-8"/>
         <title th:text="#{markdown.title}"></title>
