Test localization mechanism

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" th:lang="${@environment.getProperty('general.lang')}">
 <head>
     <meta charset="UTF-8"/>
-    <title th:text="TITLE"></title>
+    <title th:text="#{site.title}"></title>
 </head>
 <body>
 <h1>Hello, World!</h1>
