--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<h1>Hello, World!</h1>
+		<div th:replace="~{header :: banner}"></div>
 		<div th:replace="~{footer :: copyright}"></div>
 	</body>
 </html>
