--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,8 +8,8 @@
 		<link rel="stylesheet" type="text/css" href="../static/style/motofan.css" th:href="@{/style/motofan.css}"/>
 	</head>
 	<body>
-		<h1>Hello, World!</h1>
 		<div th:replace="~{header :: banner}"></div>
+		<div class="data"></div>
 		<div th:replace="~{footer :: copyright}"></div>
 	</body>
 </html>
