--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ru">
 	<body>
-		<table th:fragment="banner" class="banner" width="100%" border="0" cellspacing="0" cellpadding="0">
+		<table th:fragment="banner" class="banner">
 			<tr>
-				<td rowspan="3" width="370" class="pad" align="left" valign="top">
+				<td class="td-logo" id="td-logo-chunk-1" rowspan="3">
 					<a th:title="#{site.header.logo.tooltip}" th:href="${@environment.getProperty('site.host')}">
-						<img class="logo" border="0" width="370" height="200"
+						<img class="logo" id="img-logo-chunk-1"
 						     src="../static/image/header1.gif" th:src="@{/image/header1.gif}" alt="Logo chunk #1."/>
 					</a>
 				</td>
-				<td rowspan="3" width="141" class="pad" align="left" valign="top">
+				<td class="td-logo" id="td-logo-chunk-2" rowspan="3">
 					<a th:title="#{site.header.logo.tooltip}" th:href="${@environment.getProperty('site.host')}">
-						<img class="logo" border="0" width="141" height="200"
+						<img class="logo" id="img-logo-chunk-2"
 						     src="../static/image/header2.gif" th:src="@{/image/header2.gif}" alt="Logo chunk #2."/>
 					</a>
 				</td>
-				<td width="52" height="103" class="pad" align="left" valign="top">
-					<img class="logo" border="0" width="52" height="103"
+				<td class="td-logo" id="td-logo-chunk-3">
+					<img class="logo" id="img-logo-chunk-3"
 					     src="../static/image/header3.gif" th:src="@{/image/header3.gif}" alt="Logo chunk #3."/>
 				</td>
-				<td width="335" height="103" class="pad" align="left" valign="top">
-					<img class="logo" border="0" width="335" height="103"
+				<td class="td-logo" id="td-logo-chunk-4">
+					<img class="logo" id="img-logo-chunk-4"
 					     src="../static/image/header4.gif" th:src="@{/image/header4.gif}" alt="Logo chunk #4."/>
 				</td>
-				<td  width="100%" height="103" class="pad" align="left" valign="top">
-					<img class="logo" border="0" width="100%" height="103"
+				<td class="td-logo" id="td-logo-chunk-5">
+					<img class="logo" id="img-logo-chunk-5"
 					     src="../static/image/header5.gif" th:src="@{/image/header5.gif}" alt="Logo chunk #5."/>
 				</td>
 			</tr>
 			<tr>
-				<td colspan="3" height="47"></td>
+				<td colspan="3" id="td-logo-chunk-6"></td>
 			</tr>
 			<tr>
-				<td colspan="3" height="50">
-					<p class="site-menu">
+				<td colspan="3" id="td-logo-chunk-7">
+					<p>
 						<strong>
 							&bull;
 							<a href="//motofan.ru" target="_blank"
