--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -64,7 +64,8 @@
 							<a href="//forum.motofan.ru/index.php?act=rating&amp;CODE=show" target="_blank"
 							   th:text="#{site.header.menu.rating}">
 								Rating
-							</a>&nbsp;&bull;
+							</a>
+							&bull;
 							<a href="//forum.motofan.ru/index.php?showforum=12" target="_blank"
 							   th:text="#{site.header.menu.store}">
 								Store
