--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -4,12 +4,12 @@
 		<table th:fragment="banner" class="banner">
 			<tr>
 				<td class="td-logo" id="td-logo-chunk-1" rowspan="3">
-					<a th:title="#{site.header.logo.tooltip}" th:href="${@environment.getProperty('site.host')}">
+					<a th:title="#{site.header.logo.tooltip}" th:href="${@environment.getProperty('site.address')}">
 						<img class="logo" id="img-logo-chunk-1" src="../static/image/header1.png" th:src="@{/image/header1.png}" alt="Logo chunk #1."/>
 					</a>
 				</td>
 				<td class="td-logo" id="td-logo-chunk-2" rowspan="3">
-					<a th:title="#{site.header.logo.tooltip}" th:href="${@environment.getProperty('site.host')}">
+					<a th:title="#{site.header.logo.tooltip}" th:href="${@environment.getProperty('site.address')}">
 						<img class="logo" id="img-logo-chunk-2" src="../static/image/header2.png" th:src="@{/image/header2.png}" alt="Logo chunk #2."/>
 					</a>
 				</td>
