Refactor: renaming telegram

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -46,7 +46,7 @@
 					&bull;
 					<a href="//twitter.com/MotoFanRu" target="_blank" th:text="#{site.header.menu.twitter}">Twitter</a>
 					&bull;
-					<a class="telegram-chat" href="//t.me/motofan_ru" target="_blank" th:text="#{site.header.menu.telegram}">Telegram-chat</a>
+					<a class="telegram-link" href="//t.me/motofan_ru" target="_blank" th:text="#{site.header.menu.telegram}">Telegram</a>
 					&bull;
 					</strong>
 					</p>
