--- a/src/main/resources/static/style/motofan.css
+++ b/src/main/resources/static/style/motofan.css
@@ -89,10 +89,10 @@ table, tr, td {
 	width: 100%;
 	height: 103px;
 }
-.telegram-chat {
+.telegram-link {
 	color: #0088CC !important;
 }
-.telegram-chat:hover {
+.telegram-link:hover {
 	color: #FF6600 !important;
 }
 
