--- a/src/main/resources/static/style/motofan.css
+++ b/src/main/resources/static/style/motofan.css
@@ -23,6 +23,14 @@ table, tr, td {
 	font-size: 11px;
 	color: #222;
 }
+input, textarea, select {
+	background: #FFF;
+	border: 1px solid #FE9855;
+	color: #000;
+	font-size: 10px;
+	padding: 2px;
+	margin-right: 3px;
+}
 .page {
 	background: #FFF;
 	border: 1px solid #222;
@@ -94,6 +102,28 @@ table, tr, td {
 }
 .telegram-link:hover {
 	color: #FF6600 !important;
+}
+
+/* Pager */
+.page-link, .page-link-active {
+	color: #495143;
+	background: #FFF5E0;
+	border: 1px solid #FF6600;
+	padding: 1px 3px 1px 3px;
+	line-height: 25px;
+	font-size: 11px;
+	margin-right: 3px;
+}
+.page-link-active {
+	background: #C9A5FF;
+}
+.page-link a:active,
+.page-link a:visited,
+.page-link a:link,
+.page-link-active a:active,
+.page-link-active a:visited,
+.page-link-active a:link {
+	text-decoration: none;
 }
 
 /* Content */
