--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<body>
-<div th:fragment="copyright" class="copyright">
-	<div th:utext="#{site.footer.created}"></div>
-	<div th:with="block=#{site.footer.copyright}"
-	     th:utext="${#strings.replace(block, '%date%', #dates.year(#dates.createNow()))}">
-	</div>
-</div>
-</body>
+	<body>
+		<div class="page">
+			<div th:fragment="copyright" class="copyright">
+				<div th:utext="#{site.footer.created}">Created by EXL.</div>
+				<div th:with="block=#{site.footer.copyright}" th:utext="${#strings.replace(block, '%date%', #dates.year(#dates.createNow()))}">(c) 2020</div>
+			</div>
+		</div>
+	</body>
 </html>
