Improve header menu

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -29,9 +29,7 @@
 				</tr>
 				<tr>
 					<td colspan="3" id="td-logo-chunk-7">
-						<p>
-							<strong>&bull; <a href="//motofan.ru" target="_blank" th:text="#{site.header.menu.site}">Site</a> &bull; <a href="//wiki.motofan.ru" target="_blank" th:text="#{site.header.menu.wiki}">MotoWiki</a> &bull; <a href="//forum.motofan.ru/index.php?act=Search&amp;f=" target="_blank" th:text="#{site.header.menu.search}">Search</a> &bull; <a href="//forum.motofan.ru/index.php?act=Members" target="_blank" th:text="#{site.header.menu.members}">Members</a> &bull; <a href='//forum.motofan.ru/index.php?act=announce&amp;f=70&amp;id=17' target="_blank" th:text="#{site.header.menu.rules}">Forum Rules</a> &bull; <a href="//forum.motofan.ru/index.php?act=rating&amp;CODE=show" target="_blank" th:text="#{site.header.menu.rating}">Rating</a> &bull; <a href="//forum.motofan.ru/index.php?showforum=12" target="_blank" th:text="#{site.header.menu.store}">Store</a> &bull; <a href="//twitter.com/MotoFanRu" target="_blank" th:text="#{site.header.menu.twitter}">Twitter</a> &bull; <a class="telegram-link" href="//t.me/motofan_ru" target="_blank" th:text="#{site.header.menu.telegram}">Telegram</a> &bull;</strong>
-						</p>
+						<strong th:utext="#{site.header.menu}">MotoFan.Ru Main Menu</strong>
 					</td>
 				</tr>
 			</table>
